<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Simplicity</string>
    <string name="settings">Settings</string>
    <string name="about" translatable="false">About</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="auth">com.creativetrends.simplicity.app.provider</string>
    <string name="search_engine_choice">Search Engine Choice</string>
    <string name="donate_description">Hello there! Hundreds of hours have been put into developing and perfecting this app, so if you use it quite often, why not consider donating?\n\n\nDonating is 100% optional but, donating any amount ensures that I can keep up development, keeping this app alive &#128522;.  \n\n*Donations are US Dollars and may include tax. Exchange rates are calculated by Google Play.</string>
    <string-array name="search_engine" translatable="false">
        <item>AOL</item>
        <item>Ask</item>
        <item>Bing</item>
        <item>DuckDuckGo</item>
        <item>Ecosia</item>
        <item>Google</item>
        <item>InfoSpace</item>
        <item>MyWebSearch</item>
        <item>Qwant</item>
        <item>Searx</item>
        <item>StartPage</item>
        <item>WebCrawler</item>
        <item>Wow</item>
        <item>Yandex</item>
        <item>Yahoo</item>
    </string-array>
    <string-array name="search_engine_values" translatable="false">
        <item>https://search.aol.com/aol/search?s_chn=prt_ticker-test-g&amp;q=</item>
        <item>http://www.ask.com/web?q=</item>
        <item>https://www.bing.com/search?q=</item>
        <item>https://duckduckgo.com/?q=</item>
        <item>https://www.ecosia.org/search?q=</item>
        <item>https://www.google.com/search?q=</item>
        <item>http://search.infospace.com/search/web?q=</item>
        <item>http://int.search.mywebsearch.com/mywebsearch/GGmain.jhtml?searchfor=</item>
        <item>https://www.qwant.com/?q=</item>
        <item>https://searx.me/?q=</item>
        <item>https://www.startpage.com/do/search?q=</item>
        <item>https://www.webcrawler.com/serp?q=</item>
        <item>http://www.wow.com/search?s_it=search-thp&amp;v_t=na&amp;q=</item>
        <item>https://www.yandex.com/search/?text=</item>
        <item>https://search.yahoo.com/mobile/s?p=</item>

    </string-array>
    <string name="private_mode">Private window</string>
    <string name="history">History</string>
    <string name="share">Share…</string>
    <string name="find_in">Find in page</string>
    <string name="add_to_home">Add to Home screen</string>
    <string name="request_desk">Desktop site</string>
    <string name="clear_history">Clear History</string>
    <string name="help_trans">Help Translate Simplicity</string>
    <string name="about_app">About</string>
    <string name="new_tab">New tab</string>
    <string name="action_search">Search</string>
    <string name="ratesimple">Rate Simplicity</string>
    <string name="rate_summary">Help others enjoy Simplicity by rating the app on Google Play.</string>
    <string name="mus">Web Browser</string>
    <string name="version_spectrum">Version</string>
    <string name="support_dev">Support Development</string>
    <string name="simplicity_close">Press back again to close Simplicity</string>
    <string name="error">Problem with this link</string>
    <string name="search_bookmarks">Search bookmarks</string>
    <string name="search_history">Search history</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="rename_bookmark">Rename bookmark</string>
    <string name="share_bookmark">Share bookmark</string>
    <string name="rename_titile">Rename Bookmark</string>
    <string name="rename_message">Would you like to rename this bookmark?</string>
    <string name="remove_bookmark">Remove Bookmark?</string>
    <string name="are_you_sure">Are you sure you would like to remove</string>
    <string name="from_bookmark">from your bookmarks?</string>
    <string name="settings_more">More</string>
    <string name="terms">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_bookmarks">Clear Bookmarks</string>
    <string name="are_you_sure_bookmarks">Are you sure you would like to clear all of your bookmarks? This action cannot be undone.</string>
    <string name="are_you_sure_history">Are you sure you would like to clear all of your history? This action cannot be undone.</string>
    <string name="delete_cache">Tap To Delete App Cache</string>
    <string name="current_cache_size">Estimated cache size</string>
    <string name="cache_dialog">Delete App Cache?</string>
    <string name="cache_dialog_summary">Deleting cache can result with %s, starting slower and may cause more use of data. Are you sure you would like to continue? <b>Please note:</b> This action cannot be un-done.</string>
    <string name="trimming">Deleting cache…</string>
    <string name="policy_about" translatable="false">
Creative Trends Apps LLC built the Simplicity app as a Free app. This SERVICE is provided by Creative Trends Apps LLC at no cost and is intended for use as is.

This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Simplicity unless otherwise defined in this Privacy Policy.

\n\nInformation Collection and Use\n\n

For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Email address, Name. The information that we request will be retained by us and used as described in this privacy policy.

The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

\n\nGoogle Play Services

\n\nLog Data

We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

\n\nCookies\n\n

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

\n\nService Providers

\n\nWe may employ third-party companies and individuals due to the following reasons:

To facilitate our Service;\n\n
To provide the Service on our behalf;\n\n
To perform Service-related services; or\n\n
To assist us in analyzing how our Service is used.\n\n


We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

\n\nSecurity

We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.

\n\nLinks to Other Sites

\n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

\n\nChildren’s Privacy

\n\nThese Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.

\n\nChanges to This Privacy Policy

\n\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

\n\nContact Us

\n\nIf you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.\n\n</string>
    <string name="print_page">Print…</string>
    <string name="default_font_zoom">Default Font Zoom</string>
    <string name="ad_block">Ad Block</string>
    <string name="ad_block_sum">Block ads on websites.</string>
    <string name="do_not_track">Do Not Track</string>
    <string name="do_not_track_sum">Enable to ask sites not to track your browsing data.</string>
    <string name="clear_data">Clear Data Automatically</string>
    <string name="clear_data_sum">Clear Simplicity\'s cookies, history and data when closing the app.</string>
    <string name="location">Enable Location</string>
    <string name="location_sum">Allows websites to obtain your location.</string>
    <string name="confirm">Confirm Close</string>
    <string name="confirm_sum">Confirm you\'d like to close Simplicity with a double back press.</string>
    <string name="home_page">Home Page</string>
    <string name="remember">Remember Last Page</string>
    <string name="remember_sum">Enable to save and open your last visited page when opening Simplicity.</string>
    <string name="voice_search_button">Voice Search</string>
    <string name="voice_search_button_sum">Enable to search with your voice.</string>
    <string name="backup_restore_title">Local Backup And Restore</string>
    <string name="backup_restore_sum">Backup and restore your bookmarks and history locally.</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
</resources>