<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:title="@string/general_settings" >


        <SwitchPreference
            android:key="show_home"
            android:title="@string/show_home_icon"
            android:summary="@string/show_home_sum"
            android:icon="@drawable/ic_home_about"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="remember_page"
            android:title="@string/remember"
            android:summary="@string/remember_sum"
            android:icon="@drawable/ic_restore"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="homepage"
            android:title="@string/home_page"
            android:icon="@drawable/ic_home_about"
            android:defaultValue="https://www.google.com"
            android:inputType="textUri"
            android:singleLine="true" />

        <Preference
            android:title="divider"
            android:selectable="false"
            android:layout="@layout/divider_preference"/>

        <ListPreference
            android:key="search_engine"
            android:icon="@drawable/ic_search_engine"
            android:title="@string/search_engine_choice"
            android:summary="%s"
            android:entries="@array/search_engine"
            android:entryValues="@array/search_engine_values"
            android:defaultValue="https://www.google.com/search?q=" />


        <SwitchPreference
            android:key="confirm_close"
            android:title="@string/confirm"
            android:icon="@drawable/ic_confirm_close"
            android:summary="@string/confirm_sum"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="merge_windows"
            android:title="@string/merge_tabs"
            android:summary="@string/merge_tabs_sum"
            android:icon="@drawable/ic_merge"
            android:defaultValue="true" />

        <Preference
            android:title="divider"
            android:selectable="false"
            android:layout="@layout/divider_preference"/>



    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/privacy_settings" >


        <SwitchPreference
            android:key="v_search"
            android:title="@string/voice_search_button"
            android:summary="@string/voice_search_button_sum"
            android:icon="@drawable/ic_voice_search"
            android:defaultValue="false"/>


        <SwitchPreference
            android:key="enable_location"
            android:title="@string/location"
            android:summary="@string/location_sum"
            android:icon="@drawable/ic_location_about"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="clear_data"
            android:title="@string/clear_data"
            android:summary="@string/clear_data_sum"
            android:icon="@drawable/ic_clear_data"
            android:defaultValue="false"/>

        <SwitchPreference
            android:key="no_track"
            android:title="@string/do_not_track"
            android:summary="@string/do_not_track_sum"
            android:icon="@drawable/ic_no_track"
            android:defaultValue="true"/>


        <Preference
            android:title="divider"
            android:selectable="false"
            android:layout="@layout/divider_preference"/>



    </PreferenceCategory>


    <PreferenceCategory
        android:title="Appearance" >


        <ListPreference
            android:key="address_bar"
            android:icon="@drawable/ic_address"
            android:title="@string/omnibar_location"
            android:summary="%s"
            android:entries="@array/default_address_bar_titles"
            android:entryValues="@array/default_address_bar_entries"
            android:defaultValue="bottom"/>


        <SwitchPreference
            android:key="no_ads"
            android:title="@string/ad_block"
            android:summary="@string/ad_block_sum"
            android:icon="@drawable/ic_ad_block"
            android:defaultValue="false" />



        <SwitchPreference
            android:key="nav_color"
            android:title="@string/color_nav"
            android:icon="@drawable/ic_colorize"
            android:defaultValue="false" />



        <ListPreference
            android:key="font_pref"
            android:title="@string/default_font_zoom"
            android:summary="%s"
            android:icon="@drawable/ic_font_size"
            android:entries="@array/default_font_size_entries"
            android:entryValues="@array/default_font_size_entry_values"
            android:defaultValue="100" />


        <Preference
            android:title="divider"
            android:selectable="false"
            android:layout="@layout/divider_preference"/>


    </PreferenceCategory>




    <PreferenceCategory
        android:title="@string/settings_more">

       <!-- <Preference
            android:key="sim_cloud"
            android:title="@string/simplicity_cloud_title"
            android:summary="@string/simplicity_cloud_sum"/>-->

        <Preference
            android:key="back_restore"
            android:title="@string/backup_restore_title"
            android:summary="@string/backup_restore_sum"/>

        <!--<Preference
            android:key="sim_cloud"
            android:title="@string/simplicity_cloud_title"
            android:summary="@string/simplicity_cloud_sum"/>-->

        <Preference
            android:key="about_app"
            android:title="@string/about"/>

        <Preference
            android:key="get_source"
            android:title="Simplicity Source Code">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/creativetrendsapps/simplicitybrowser" />
        </Preference>

        <Preference
            android:key="terms_set"
            android:title="@string/terms"/>

        <Preference
            android:key="privacy_policy_set"
            android:title="@string/privacy_policy"/>

        <Preference
            android:title="divider"
            android:selectable="false"
            android:layout="@layout/divider_preference"/>


    </PreferenceCategory>




</PreferenceScreen>
