<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sim_menu"
    android:layout_width="245dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top|end"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:visibility="invisible"
    android:soundEffectsEnabled="false"
    app:cardElevation="10dp"
    tools:ignore="RtlHardcoded">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingTop="10dp"
                android:weightSum="4">


                <ImageView
                    android:id="@+id/sim_go_forward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_about_about"
                    tools:ignore="ContentDescription"
                    android:background="?attr/selectableItemBackgroundBorderless"/>


                <ImageView
                    android:id="@+id/sim_reader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_reader_mode"
                    tools:ignore="ContentDescription"
                    android:background="?attr/selectableItemBackgroundBorderless"/>


                <ImageView
                    android:id="@+id/sim_bookmark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_bookmark"
                    tools:ignore="ContentDescription"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <ImageView
                    android:id="@+id/sim_refresh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_refresh_page"
                    tools:ignore="ContentDescription"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <ImageView
                    android:id="@+id/sim_stop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_stop_loading"
                    android:visibility="invisible"
                    tools:ignore="ContentDescription"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/sim_new_window"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/new_tab"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/sim_private_mode"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="10dp"
                        android:text="@string/private_mode"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:background="?android:attr/selectableItemBackground"/>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/sim_private_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_alignBaseline="@+id/sim_private_mode"
                        android:layout_alignBottom="@+id/sim_private_mode"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/sim_books"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/bookmarks"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>


                <TextView
                    android:id="@+id/sim_history"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/history"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>


                <TextView
                    android:id="@+id/sim_share"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/share"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/sim_print"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/print_page"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/sim_find"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/find_in"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>


                <TextView
                    android:id="@+id/sim_home_screen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/add_to_home"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/sim_desktop"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingTop="10dp"
                        android:text="@string/request_desk"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        tools:ignore="RtlHardcoded,RtlSymmetry"
                        android:background="?android:attr/selectableItemBackground"/>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/sim_desktop_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_alignBaseline="@+id/sim_desktop"
                        android:layout_alignBottom="@+id/sim_desktop"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/sim_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/settings"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:background="?android:attr/selectableItemBackground"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>